--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==5.0.4
 line-bot-sdk==3.11.0
-django-environ==0.11.2
+python-dotenv==1.0.1
 djangorestframework==3.15.1
 drf_yasg==1.21.7
 Requests==2.31.0
